--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             alt="John Doe product designer"
           />
           <figcaption>
-            <strong>John Doe</strong><br />
-            Product Designer
+            <h2>John Doe</h2>
+            <p>Product Designer</p>
           </figcaption>
         </figure>
         <figure>
@@ -106,8 +106,8 @@
             alt="John Doe frontend developer"
           />
           <figcaption>
-            <strong>John Doe</strong><br />
-            Frontend Developer
+            <h2>John Doe</h2>
+            <p>Frontend Developer</p>
           </figcaption>
         </figure>
         <figure>
@@ -118,8 +118,8 @@
             alt="John Doe marketing"
           />
           <figcaption>
-            <strong>John Doe</strong><br />
-            Marketing
+            <h2>John Doe</h2>
+            <p>Marketing</p>
           </figcaption>
         </figure>
         <figure>
@@ -130,8 +130,8 @@
             alt="John Doe UI Designer"
           />
           <figcaption>
-            <strong>John Doe</strong><br />
-            UI Designer
+            <h2>John Doe</h2>
+            <p>UI Designer</p>
           </figcaption>
         </figure>
       </section>
